crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_row_cap_notice_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6+ files · 6 hunks  standalone  [Accept All]                          watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │alpha  main · 3+ files                                                 │"
"│  main · 3+ files         │~/W/alpha                                                              │"
"│  M f1  +1 −1             │3 files shown · 2 more changed paths not scanned (first 3 by path)     │"
"│  M f2  +1 −0             │  M f1  +1 −1                                                          │"
"│  A g1  +1 −0             │  M f2  +1 −0                                                          │"
"│──────────────────────────│  A g1  +1 −0                                                          │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"3 files shown · 2 more changed paths not scanned (first 3 by path) · 0s                             "
