crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_scope_and_snooze_notice_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  1 repo · 3 files · 5 hunks  herdr 0.8.2  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │W/notes  draft · 1 file                                                │"
"│  main · 3 files          │~/W/notes                                                              │"
"│  M f1  +1 −1             │  M n2.md  +2 −0                                                       │"
"│  M f2  +1 −0             │                                                                       │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"snoozed beta until 2026-09-15 · 0s  scope: alpha · 1 repo hidden (w shows all) · 1 snoozed (S shows)"
