crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_seen_accept_all_modal_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 11 files · 13 hunks  standalone  [Accept All]                         watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │select a file (↑↓ or click) · ? for help                               │"
"│  feat-x · 8 files        │                                                                       │"
"│  M f1  +1 −1             │                                                                       │"
"│  M f2  +1 −0             │                                                                       │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│  seen · 5 files          │                                                                       │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]┌ accept ───────────────────────────────────────────┐                       │"
"│  upstream · 1 file   │ Accept all 11 files across 3 repos?               │                       │"
"│──────────────────────│ 1 grouped upstream · 5 grouped seen · 0 collapsed │                       │"
"│W/notes               │                                                   │                       │"
"│  draft · 1 file      │ y / ⏎ confirm    n / Esc cancel                   │                       │"
"│  M n2.md  +2 −0      └───────────────────────────────────────────────────┘                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"y confirm  n cancel  q quit                                                                         "
