crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_seen_accept_all_modal_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..39 Reset Reset BOLD
0 41..51 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..68 Reset Reset DIM
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
4 0..1 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
5 0..1 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
6 0..1 Cyan Reset -
6 15..18 Green Reset -
6 19..21 Red Reset -
6 27..28 Cyan Reset -
7 0..1 Cyan Reset -
7 27..28 Cyan Reset -
8 0..1 Cyan Reset -
8 1..27 Reset Reset DIM
8 27..28 Cyan Reset -
9 0..1 Cyan Reset -
9 1..5 Reset Reset BOLD
9 27..28 Cyan Reset -
10 0..1 Cyan Reset -
10 27..28 Cyan Reset -
11 0..1 Cyan Reset -
11 9..11 Green Reset -
11 12..14 Red Reset -
11 14..26 Reset Reset DIM
11 27..28 Cyan Reset -
12 0..1 Cyan Reset -
12 9..11 Green Reset -
12 12..14 Red Reset -
12 14..23 Reset Reset DIM
12 23..76 Cyan Reset -
13 0..1 Cyan Reset -
13 23..24 Cyan Reset -
13 25..60 Reset Reset BOLD
13 75..76 Cyan Reset -
14 0..1 Cyan Reset -
14 1..23 Reset Reset DIM
14 23..24 Cyan Reset -
14 75..76 Cyan Reset -
15 0..1 Cyan Reset -
15 1..8 Reset Reset BOLD
15 23..24 Cyan Reset -
15 75..76 Cyan Reset -
16 0..1 Cyan Reset -
16 23..24 Cyan Reset -
16 75..76 Cyan Reset -
17 0..1 Cyan Reset -
17 12..14 Green Reset -
17 15..17 Red Reset -
17 23..76 Cyan Reset -
18 0..1 Cyan Reset -
18 27..28 Cyan Reset -
19 0..1 Cyan Reset -
19 27..28 Cyan Reset -
20 0..1 Cyan Reset -
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 27..28 Cyan Reset -
22 0..1 Cyan Reset -
22 27..28 Cyan Reset -
23 0..1 Cyan Reset -
23 27..28 Cyan Reset -
24 0..1 Cyan Reset -
24 27..28 Cyan Reset -
25 0..1 Cyan Reset -
25 27..28 Cyan Reset -
26 0..1 Cyan Reset -
26 27..28 Cyan Reset -
27 0..1 Cyan Reset -
27 27..28 Cyan Reset -
28 0..28 Cyan Reset -
29 0..27 Reset Reset DIM
