crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_seen_group_closed_80x24_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 11 files · 13 hunks  standalone  [Accept All]     watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────┐"
"│alpha                     │select a file (↑↓ or click) · ? for help           │"
"│  feat-x · 8 files        │                                                   │"
"│  M f1  +1 −1             │                                                   │"
"│  M f2  +1 −0             │                                                   │"
"│  M parse.rs  +10 −2      │                                                   │"
"│  seen · 5 files          │                                                   │"
"│──────────────────────────│                                                   │"
"│beta                      │                                                   │"
"│  main · 2 files          │                                                   │"
"│  A u1  +1 −0  [upstream] │                                                   │"
"│  A u2  +2 −0  [mixed]    │                                                   │"
"│  upstream · 1 file       │                                                   │"
"│──────────────────────────│                                                   │"
"│W/notes                   │                                                   │"
"│  draft · 1 file          │                                                   │"
"│  M n2.md  +2 −0          │                                                   │"
"│                          │                                                   │"
"│                          │                                                   │"
"│                          │                                                   │"
"│                          │                                                   │"
"└──────────────────────────┴───────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  ^A accept all  t hide empty  Tab focus  ? help  q quit       "
